feat: institutions and configure system